--- a/normal/index.html
+++ b/normal/index.html
@@ -17,7 +17,7 @@
     4555
     
     <br>
-    <img src="./images/tw.png"  width="64" height="64">
+    <img src="../images/tw.png"  width="64" height="64">
     
     <br>
     aaaaaaaaaa
